networkpolicies/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-frontend-to-backend
spec:
  podSelector:
    matchLabels:
      app: backend
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: frontend
      ports:
        - port: 80
          protocol: TCP
    - ports:  # <-- allow DNS
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
  policyTypes:
    - Ingress
